去掉sun的私有api